src/parser/parser.rs
//! Recursive descent parser for FORMA.
//!
//! This module implements a hand-written recursive descent parser that
//! handles FORMA's indentation-significant syntax.

use crate::errors::{ParseError, Result};
use crate::lexer::{FStringPart, Span, Token, TokenKind};
use crate::parser::ast::*;

/// The parser for FORMA source code.
pub struct Parser<'a> {
    tokens: &'a [Token],
    pos: usize,
    errors: Vec<crate::errors::CompileError>,
}

impl<'a> Parser<'a> {
    pub fn new(tokens: &'a [Token]) -> Self {
        Self {
            tokens,
            pos: 0,
            errors: Vec::new(),
        }
    }

    /// Parse a complete source file.
    /// Uses error recovery to continue parsing after errors and report multiple issues.
    pub fn parse(mut self) -> std::result::Result<SourceFile, Vec<crate::errors::CompileError>> {
        let start = self.current_span();
        let mut items = Vec::new();

        while !self.at_end() {
            while self.check(TokenKind::Newline) {
                self.advance();
            }
            if self.at_end() {
                break;
            }

            match self.parse_item() {
                Ok(item) => items.push(item),
                Err(e) => {
                    self.errors.push(e);
                    self.synchronize();
                }
            }
        }

        if !self.errors.is_empty() {
            return Err(self.errors);
        }

        let end = self.previous_span();
        Ok(SourceFile {
            items,
            span: start.merge(end),
        })
    }

    // ========================================================================
    // Items
    // ========================================================================

    fn parse_item(&mut self) -> Result<Item> {
        let attrs = self.parse_attributes()?;
        let start = self.current_span();

        // Check for visibility
        let vis = self.parse_visibility()?;

        // Check for async/unsafe modifiers
        let is_async = self.match_token(TokenKind::As);
        let is_unsafe = self.match_token(TokenKind::Un);

        // Use contextual keyword checks for single-letter keywords (f, s, e, t, i)
        // These are now emitted as Ident tokens and distinguished by lookahead
        let mut kind = if self.is_function_keyword() {
            self.parse_function(is_async, is_unsafe, vis)?
        } else if self.is_struct_keyword() {
            ItemKind::Struct(self.parse_struct(vis)?)
        } else if self.is_enum_keyword() {
            ItemKind::Enum(self.parse_enum(vis)?)
        } else if self.is_trait_keyword() {
            ItemKind::Trait(self.parse_trait(is_unsafe, vis)?)
        } else if self.is_impl_keyword() {
            ItemKind::Impl(self.parse_impl(is_unsafe)?)
        } else if self.check(TokenKind::Type) {
            ItemKind::TypeAlias(self.parse_type_alias(vis)?)
        } else if self.check(TokenKind::Us) {
            ItemKind::Use(self.parse_use()?)
        } else if self.check(TokenKind::Md) {
            ItemKind::Module(self.parse_module(vis)?)
        } else if self.check_ident() && self.peek_is(TokenKind::ColonColon) {
            ItemKind::Const(self.parse_const(vis)?)
        } else {
            return Err(self.error("expected item (f, s, e, t, i, type, us, md)"));
        };

        let remaining_attrs = if let ItemKind::Function(ref mut func) = kind {
            let mut keep = Vec::new();
            for attr in attrs {
                if (attr.name.name == "pre" || attr.name.name == "post")
                    && let Some(contract) = Self::extract_contract(&attr)
                {
                    if attr.name.name == "pre" {
                        func.preconditions.push(contract);
                    } else {
                        func.postconditions.push(contract);
                    }
                    continue;
                }

                if let Some((is_post, contract)) = self.expand_contract_pattern(&attr)? {
                    if is_post {
                        func.postconditions.push(contract);
                    } else {
                        func.preconditions.push(contract);
                    }
                    continue;
                }

                keep.push(attr);
            }
            keep
        } else if let ItemKind::Struct(ref mut structure) = kind {
            let mut keep = Vec::new();
            for attr in attrs {
                if attr.name.name == "inv"
                    && let Some(contract) = Self::extract_contract(&attr)
                {
                    structure.invariants.push(contract);
                } else {
                    keep.push(attr);
                }
            }
            keep
        } else {
            attrs
        };

        let end = self.previous_span();
        Ok(Item {
            kind,
            attrs: remaining_attrs,
            span: start.merge(end),
        })
    }

    /// Extract a Contract from a @pre or @post attribute
    fn extract_contract(attr: &Attribute) -> Option<Contract> {
        // Find the condition expression in the args
        let condition_arg = attr.args.iter().find(|a| a.name.name == "condition")?;
        let condition = condition_arg.expr.clone()?;

        // Find optional message
        let message = attr
            .args
            .iter()
            .find(|a| a.name.name == "message")
            .and_then(|a| {
                if let Some(lit) = &a.value
                    && let LiteralKind::String(s) = &lit.kind
                {
                    return Some(s.clone());
                }
                None
            });

        Some(Contract {
            condition,
            message,
            pattern_name: None,
            span: attr.span,
        })
    }

    fn parse_attributes(&mut self) -> Result<Vec<Attribute>> {
        let mut attrs = Vec::new();
        while self.check(TokenKind::At) {
            attrs.push(self.parse_attribute()?);
            self.skip_newlines();
        }
        Ok(attrs)
    }

    fn parse_attribute(&mut self) -> Result<Attribute> {
        let start = self.current_span();
        self.expect(TokenKind::At)?;
        let name = self.parse_ident()?;

        // Check for contract attributes that take expression arguments
        let is_contract = name.name == "pre" || name.name == "post" || name.name == "inv";

        let args = if self.match_token(TokenKind::LParen) {
            if is_contract {
                self.parse_contract_attr_args(name.name == "post")?
            } else {
                let args = self.parse_attr_args()?;
                self.expect(TokenKind::RParen)?;
                args
            }
        } else {
            Vec::new()
        };

        Ok(Attribute {
            name,
            args,
            span: start.merge(self.previous_span()),
        })
    }

    /// Parse contract attribute arguments: @pre(condition) or @pre(condition, "message")
    fn parse_contract_attr_args(&mut self, allow_old: bool) -> Result<Vec<AttrArg>> {
        let start = self.current_span();
        let expr = self.parse_contract_expr(allow_old)?;
        let mut args = vec![AttrArg {
            name: Ident::new("condition", start),
            value: None,
            expr: Some(Box::new(expr)),
            span: start.merge(self.previous_span()),
        }];

        // Optional message
        if self.match_token(TokenKind::Comma) {
            let msg_start = self.current_span();
            if let Some(TokenKind::String(s)) = self.current_kind() {
                let msg = s.clone();
                self.advance();
                args.push(AttrArg {
                    name: Ident::new("message", msg_start),
                    value: Some(Literal {
                        kind: LiteralKind::String(msg.clone()),
                        span: msg_start.merge(self.previous_span()),
                    }),
                    expr: None,
                    span: msg_start.merge(self.previous_span()),
                });
            }
        }

        self.expect(TokenKind::RParen)?;
        Ok(args)
    }

    fn parse_contract_expr(&mut self, allow_old: bool) -> Result<Expr> {
        self.skip_whitespace_tokens();
        let mut expr = if self.is_contract_quantifier_start() {
            self.parse_contract_quantifier(allow_old)?
        } else {
            self.parse_contract_membership(allow_old)?
        };

        self.skip_whitespace_tokens();
        if self.match_token(TokenKind::FatArrow) {
            let right = self.parse_contract_expr(allow_old)?;
            let not_left_span = expr.span;
            let not_left = Expr {
                kind: ExprKind::Unary(UnaryOp::Not, Box::new(expr)),
                span: not_left_span,
            };
            expr = Expr {
                kind: ExprKind::Binary(Box::new(not_left), BinOp::Or, Box::new(right.clone())),
                span: not_left_span.merge(right.span),
            };
        }

        self.validate_old_usage(&expr, allow_old)?;
        Ok(expr)
    }

    fn is_contract_quantifier_start(&self) -> bool {
        let head_is_quant = matches!(
            self.current_kind(),
            Some(TokenKind::Ident(ref name)) if name == "forall" || name == "exists"
        );
        if !head_is_quant {
            return false;
        }
        matches!(self.peek_kind(1), Some(TokenKind::Ident(_)))
            && matches!(self.peek_kind(2), Some(TokenKind::In))
    }

    fn parse_contract_quantifier(&mut self, allow_old: bool) -> Result<Expr> {
        let start = self.current_span();
        let quant_name = match self.current_kind() {
            Some(TokenKind::Ident(name)) => name,
            _ => return Err(self.error("expected 'forall' or 'exists'")),
        };
        self.advance(); // quantifier keyword

        let var = self.parse_ident()?;
        self.expect(TokenKind::In)?;
        let iterable = self.parse_expr()?;
        self.expect(TokenKind::Colon)?;
        let predicate = self.parse_contract_expr(allow_old)?;

        let closure = Expr {
            kind: ExprKind::Closure(Closure {
                params: vec![ClosureParam {
                    name: var.clone(),
                    ty: None,
                    span: var.span,
                }],
                return_type: None,
                body: Box::new(predicate.clone()),
                span: var.span.merge(predicate.span),
            }),
            span: var.span.merge(predicate.span),
        };

        let call_name = if quant_name == "forall" {
            "__forall"
        } else {
            "__exists"
        };
        let callee = Expr {
            kind: ExprKind::Ident(Ident::new(call_name, start)),
            span: start,
        };

        let iter_span = iterable.span;
        Ok(Expr {
            kind: ExprKind::Call(
                Box::new(callee),
                vec![
                    Arg {
                        name: None,
                        value: iterable,
                        pass_mode: PassMode::Owned,
                        span: iter_span,
                    },
                    Arg {
                        name: None,
                        value: closure,
                        pass_mode: PassMode::Owned,
                        span: var.span.merge(predicate.span),
                    },
                ],
            ),
            span: start.merge(predicate.span),
        })
    }

    fn parse_contract_membership(&mut self, _allow_old: bool) -> Result<Expr> {
        let start = self.current_span();
        let left = self.parse_expr()?;
        self.skip_whitespace_tokens();
        if self.match_token(TokenKind::In) {
            let right = self.parse_expr()?;
            let right_span = right.span;
            let left_span = left.span;
            return Ok(Expr {
                kind: ExprKind::MethodCall(
                    Box::new(right),
                    Ident::new("contains", start),
                    vec![Arg {
                        name: None,
                        value: left,
                        pass_mode: PassMode::Owned,
                        span: left_span,
                    }],
                ),
                span: start.merge(right_span),
            });
        }
        Ok(left)
    }

    fn validate_old_usage(&self, expr: &Expr, allow_old: bool) -> Result<()> {
        match &expr.kind {
            ExprKind::Binary(left, _, right)
            | ExprKind::Coalesce(left, right)
            | ExprKind::Pipeline(left, right)
            | ExprKind::Index(left, right)
            | ExprKind::Assign(left, right, _) => {
                self.validate_old_usage(left, allow_old)?;
                self.validate_old_usage(right, allow_old)?;
            }
            ExprKind::AssignOp(left, _, right) => {
                self.validate_old_usage(left, allow_old)?;
                self.validate_old_usage(right, allow_old)?;
            }
            ExprKind::Unary(_, inner)
            | ExprKind::Field(inner, _)
            | ExprKind::TupleField(inner, _)
            | ExprKind::Try(inner)
            | ExprKind::Await(inner)
            | ExprKind::Spawn(inner)
            | ExprKind::Paren(inner)
            | ExprKind::Cast(inner, _) => {
                self.validate_old_usage(inner, allow_old)?;
            }
            ExprKind::Call(callee, args) => {
                if let ExprKind::Ident(name) = &callee.kind
                    && name.name == "old"
                {
                    if !allow_old {
                        return Err(ParseError::new(
                            "old(...) is only valid in @post contracts",
                            expr.span,
                        )
                        .into());
                    }
                    if args.len() != 1 {
                        return Err(ParseError::new(
                            "old(...) takes exactly one argument",
                            expr.span,
                        )
                        .into());
                    }
                }
                self.validate_old_usage(callee, allow_old)?;
                for arg in args {
                    self.validate_old_usage(&arg.value, allow_old)?;
                }
            }
            ExprKind::MethodCall(recv, _, args) => {
                self.validate_old_usage(recv, allow_old)?;
                for arg in args {
                    self.validate_old_usage(&arg.value, allow_old)?;
                }
            }
            ExprKind::Closure(closure) => self.validate_old_usage(&closure.body, allow_old)?,
            ExprKind::Tuple(items) | ExprKind::Array(items) => {
                for item in items {
                    self.validate_old_usage(item, allow_old)?;
                }
            }
            ExprKind::ArrayRepeat(value, count) => {
                self.validate_old_usage(value, allow_old)?;
                self.validate_old_usage(count, allow_old)?;
            }
            ExprKind::MapOrSet(entries) => {
                for entry in entries {
                    self.validate_old_usage(&entry.key, allow_old)?;
                    if let Some(value) = &entry.value {
                        self.validate_old_usage(value, allow_old)?;
                    }
                }
            }
            ExprKind::Range(start, end, _) => {
                if let Some(start) = start {
                    self.validate_old_usage(start, allow_old)?;
                }
                if let Some(end) = end {
                    self.validate_old_usage(end, allow_old)?;
                }
            }
            _ => {}
        }
        Ok(())
    }

    fn parse_contract_expr_source(
        &mut self,
        expr_src: &str,
        allow_old: bool,
        span: Span,
    ) -> Result<Expr> {
        use crate::lexer::Scanner;

        let scanner = Scanner::new(expr_src);
        let (tokens, lex_errors) = scanner.scan_all();
        if !lex_errors.is_empty() {
            return Err(ParseError::new(
                format!(
                    "error in contract pattern expression: {}",
                    lex_errors[0].message
                ),
                span,
            )
            .into());
        }

        let mut parser = Parser::new(&tokens);
        let expr = parser.parse_contract_expr(allow_old)?;
        parser.skip_whitespace_tokens();
        if !parser.at_end() {
            return Err(
                ParseError::new("unexpected tokens in contract pattern expression", span).into(),
            );
        }
        Ok(expr)
    }

    fn is_result_context(attr: &Attribute) -> bool {
        attr.args.iter().any(|arg| arg.name.name == "result")
    }

    fn pattern_arg_name(attr: &Attribute, index: usize) -> Result<String> {
        attr.args
            .get(index)
            .map(|arg| arg.name.name.clone())
            .ok_or_else(|| {
                ParseError::new(
                    format!(
                        "pattern @{} expects at least {} argument(s)",
                        attr.name.name,
                        index + 1
                    ),
                    attr.span,
                )
                .into()
            })
    }

    fn expand_contract_pattern(&mut self, attr: &Attribute) -> Result<Option<(bool, Contract)>> {
        #[derive(Clone, Copy)]
        enum PatternContext {
            PreOnly,
            PostOnly,
            Both,
        }

        let name = attr.name.name.as_str();
        let (expr_src, is_post, context) = match name {
            "nonempty" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{}.len() > 0", x),
                    Self::is_result_context(attr),
                    PatternContext::PreOnly,
                )
            }
            "nonnegative" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} >= 0", x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "positive" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} > 0", x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "nonzero" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} != 0", x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "bounded" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                let lo = Self::pattern_arg_name(attr, 1)?;
                let hi = Self::pattern_arg_name(attr, 2)?;
                (
                    format!("{} >= {} && {} <= {}", x, lo, x, hi),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "sorted" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("forall i in 0..{}.len()-1: {}[i] <= {}[i+1]", x, x, x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "sorted_desc" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("forall i in 0..{}.len()-1: {}[i] >= {}[i+1]", x, x, x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "unique" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!(
                        "forall i in 0..{}.len(): forall j in 0..{}.len(): i != j => {}[i] != {}[j]",
                        x, x, x, x
                    ),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "same_length" => {
                let a = Self::pattern_arg_name(attr, 0)?;
                let b = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("{}.len() == {}.len()", a, b),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "permutation" => {
                let a = Self::pattern_arg_name(attr, 0)?;
                let b = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("permutation({}, {})", a, b),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "unchanged" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} == old({})", x, x),
                    true,
                    PatternContext::PostOnly,
                )
            }
            "pure" => {
                if !attr.args.is_empty() {
                    return Err(
                        ParseError::new("@pure takes no arguments".to_string(), attr.span).into(),
                    );
                }
                ("true".to_string(), true, PatternContext::PostOnly)
            }
            // === Sprint 48: Numeric Patterns ===
            "even" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} % 2 == 0", x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "odd" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("{} % 2 != 0", x),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "divisible" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                let n = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("{} % {} == 0", x, n),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "in_range" => {
                let x = Self::pattern_arg_name(attr, 0)?;
                let lo = Self::pattern_arg_name(attr, 1)?;
                let hi = Self::pattern_arg_name(attr, 2)?;
                (
                    format!("{} > {} && {} < {}", x, lo, x, hi),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            // === Sprint 48: Collection Membership Patterns ===
            "contains" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                let elem = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("{} in {}", elem, arr),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "all_positive" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("forall x in {}: x > 0", arr),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "all_nonnegative" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("forall x in {}: x >= 0", arr),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "all_nonzero" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                (
                    format!("forall x in {}: x != 0", arr),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            // === Sprint 48: Index Patterns ===
            "valid_index" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                let i = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("{} >= 0 && {} < {}.len()", i, i, arr),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "valid_range" => {
                let arr = Self::pattern_arg_name(attr, 0)?;
                let lo = Self::pattern_arg_name(attr, 1)?;
                let hi = Self::pattern_arg_name(attr, 2)?;
                (
                    format!("{} >= 0 && {} <= {}.len() && {} <= {}", lo, hi, arr, lo, hi),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            // === Sprint 48: Set-like Patterns ===
            "subset" => {
                let a = Self::pattern_arg_name(attr, 0)?;
                let b = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("forall x in {}: x in {}", a, b),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "superset" => {
                let a = Self::pattern_arg_name(attr, 0)?;
                let b = Self::pattern_arg_name(attr, 1)?;
                (
                    format!("forall x in {}: x in {}", b, a),
                    Self::is_result_context(attr),
                    PatternContext::Both,
                )
            }
            "disjoint" => {
